[B][/B]
  - Improved setup handling

[B]0.0.1[/B]
  - Initial version